[package]
name = "wireguard-nt-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.8"
windows-sys = { version = "0.48", features = [
  "Win32_Networking_WinSock",
  "Win32_NetworkManagement_Ndis",
] }

[build-dependencies]
bindgen = { version = "0.69" }
